refactor: refactored registrations controller
