# app/controllers/registrations_controller.rb
@@ -1,18 +1,0 @@
-# frozen_string_literal: true
-
-class RegistrationsController < Devise::RegistrationsController
-  respond_to :json
-
-  def create
-    build_resource(sign_up_params)
-
-    resource.save!
-    render_resource(resource)
-  end
-
-  private
-
-    def sign_up_params
-      params.permit(:email, :password, :password_confirmation, :name, :provider)
-    end
-end
